--- a/LinkedListDemo/LinkedListDemo/LinkedListDemo.csproj
+++ b/LinkedListDemo/LinkedListDemo/LinkedListDemo.csproj
@@ -44,9 +44,10 @@
   </ItemGroup>
   <ItemGroup>
     <Compile Include="LinkedListD.cs" />
+    <Compile Include="LinkedList_Node.cs" />
+    <Compile Include="Node.cs" />
     <Compile Include="Program.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
-    <Compile Include="Queue_Demo.cs" />
     <Compile Include="Stack_Demo.cs" />
   </ItemGroup>
   <ItemGroup>
