--- a/LinkedListDemo/LinkedListDemo/LinkedListDemo.csproj
+++ b/LinkedListDemo/LinkedListDemo/LinkedListDemo.csproj
@@ -48,6 +48,7 @@
     <Compile Include="Node.cs" />
     <Compile Include="Program.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
+    <Compile Include="QueueLinkedList.cs" />
     <Compile Include="StackLinkedList.cs" />
     <Compile Include="Stack_Demo.cs" />
   </ItemGroup>
